# sands-of-rust

./: .gitignore  Cargo.toml  Makefile  README.md  text
.github/workflows/: main.yml
docs/: 0.bootstrap.js  bootstrap.js  index.html
shaders/: compute.frag  copy.frag  display.frag  dummy.vert
src/: cell.rs  field.rs  lib.rs  rules.rs
www/: index.html  index.js  package.json  webpack.config.js
