[package]
name = "sands-of-rust"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
glsmrs = "0.1.1"
strum = "0.20"
strum_macros = "0.20"

[dependencies.web-sys]
version = "0.3.39"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]


[profile.release]
lto = true
opt-level = 's'