[package]
name = "sands-of-rust"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "*"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
strum = "0.24.0"
strum_macros = "0.24.0"
hex_color = "1.0"
glsmrs = { path = "../glsmrs" }

[dependencies.web-sys]
version = "0.3.56"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'CanvasRenderingContext2d',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]


[profile.release]
lto = true
opt-level = 's'